fetch(payment):merge-payments-system
